Convert LocRibWriter to DOM APIs
LocRibWriter is not very complicated, but it affects also best path
selection and add-path objects. This patch performs a straight conversion
without cleaning up RIBSupport and related classes. That part will be
done in a follow-up patch.

JIRA: BGPCEP-853
Change-Id: If6b22adf8f9a15c744ed873a5e114a251023c7a8
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
Signed-off-by: Claudio D. Gasparini <claudio.gasparini@pantheon.tech>